# hhh-diff-bot

./: .gitignore  .helmignore  .mise.toml  Chart.yaml  Dockerfile  LICENSE  README.md  commands.md  main.py  pyproject.toml  reminder.py  renovate.json  requirements.txt  secrets.json.example  setup.py  values.yaml
.github/workflows/: build_publish.yml  lint_build.yml  publish.yml  workflow.yml
.kubernetes/: manifest.yaml
chart/: values.yaml
chart/templates/: deployment.yaml  pvc.yml  secret.yml  service-account.yaml  statefulset.yaml
src/telegram_bot/: bot.py  chat.py  config.py  decorators.py  logger.py  main.py  openai.py  user.py
src/tests/: test_stub.py
telegram_bot/: __init__.py  bing_images.py  bot.py  chat.py  config.py  decorators.py  logger.py  openai.py  state.py  user.py
templates/: configmap.yml  cronjob.yml  deployment.yaml  pvc.yml  rbac.yaml  secret.yml
