[project]
requires-python = "==3.13.*"
name = "telegram-bot"
description = ""
version = "1.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "httpx ==0.28.*",
    "openai >=1.0.0, <2.0.0",
    "python-telegram-bot ==22.0",
]

[dependency-groups]
dev = [
    "mypy ==1.15.*",
    "pytest >=8.0.0, <9.0.0",
    "ruff ==0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
# strict = true
# check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = true
allow_untyped_defs = true
allow_incomplete_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "I001",
    "LOG",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["telegram_bot"]
